--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,7 +58,7 @@
         android:background="@color/rosa"
         android:clickable="true"
         android:src="@drawable/ic_add"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/preto"
         app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonRemove"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTelefone"
         tools:ignore="MissingConstraints" />
@@ -72,7 +72,7 @@
         android:layout_marginRight="16dp"
         android:background="@color/rosaEscuro"
         android:clickable="true"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/preto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTelefone"
         app:srcCompat="@drawable/ic_delete"
@@ -90,7 +90,7 @@
         android:layout_marginBottom="24dp"
         android:text="Contatos"
         android:textAllCaps="true"
-        android:textColor="@color/rosaEscuro"
+        android:textColor="@color/preto"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/floatingActionButtonAdd"
