--- a/app/src/main/res/layout/activity_introducao.xml
+++ b/app/src/main/res/layout/activity_introducao.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/branco"
     tools:context=".view.IntroducaoActivity">
 
     <ImageView
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/telefone4" />
+        app:srcCompat="@drawable/telefone" />
 
     <TextView
         android:id="@+id/textViewIntroducao"
@@ -31,9 +31,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Aplicativo desenvolvido no workshop da DigitalHouse!"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
         android:textAlignment="center"
-        android:textColor="@color/branco"
+        android:textColor="@color/preto"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,10 +48,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:backgroundTint="@color/branco"
+        android:backgroundTint="@color/preto"
         android:text="Começar"
         android:textAllCaps="true"
-        android:textColor="@color/rosaEscuro"
+        android:textColor="@color/branco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewIntroducao" />
